# paper-learning-system

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: daily-paper-radar.yml  (+1 more)
apps/: README.md
config/: curriculum.yaml  integrations.yaml  profile.yaml  ranking.yaml  report_template.yaml  sources.yaml  tools.yaml  topics.yaml
curriculum/: architecture_classics.yaml  cognition_classics.yaml  gpu_graphics_classics.yaml  llm_agent_classics.yaml  roadmap.md  sociology_classics.yaml
daily/: README.md
data/: README.md
deep_read/: README.md
knowledge_graph/: architecture.md  cognition.md  gpu_graphics.md  index.md  llm_agent.md  sociology.md
schemas/: curriculum_progress.schema.json  daily_index.schema.json  daily_report.schema.json  knowledge_graph.schema.json  latest.schema.json  paper.schema.json  papers_index.schema.json  reading_status.schema.json  reading_status_entry.schema.json
scripts/: backfill_classics.py  export_to_csv.py  run_daily.py  sync_notion.py
skills/: README.md
tests/: test_arxiv_fetcher.py  test_biorxiv_fetcher.py  test_curriculum.py  test_daily_pipeline.py  test_dedupe.py  test_enrichment_pipeline.py  test_exports.py  test_github_actions_workflow.py  test_json_schema.py  test_models.py  test_no_api_key_degradation.py  test_normalize.py  test_openreview_fetcher.py  test_public_json_contract.py  test_rank.py  test_reading_status.py  test_report_render.py  test_semantic_scholar_enrichment.py  test_state_store.py  test_time.py  test_topic_group_fetching.py
(+88 files in other folders)
