[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-learning-system"
version = "0.1.0"
description = "GitHub-first paper radar, curriculum engine, knowledge graph, archive, and integration layer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "JayeCheng" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
paper-learning = "paper_learning.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_learning"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
